# smart-research-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_DE_IMPLEMENTACAO.md  START_HOST.bat  docker-compose.yml  mcp-server.mjs  migrate_memory_v1_to_v2.py  pyproject.toml  start_proxy_server.py  test_sources.py
config/: domains.yaml  misinformation_domains.yaml  scoring_weights.yaml  sources.yaml
hooks/: anti_query_vaga.py
prompts/: gap_detector.md  intent_analyzer.md  peer_review.md  query_expander.md  ranker_system.md  report_generator.md  source_planner.md  synthesizer.md
src/: comparator.py  confidence_scorer.py  confidence_scorer_v2.py  config.py  conflict_detector.py  debate_orchestrator.py  deep_researcher.py  evidence_graph.py  feedback_ranker.py  feedback_store.py  gap_detector.py  intent_analyzer.py  knowledge_graph.py  link_verifier.py  main.py  mcp_server.py  misinformation_detector.py  model_router.py  operation_modes.py  orchestrator.py  peer_review_agent.py  proxy_manager.py  query_expander.py  query_validator.py  ranker.py  report_generator.py  research_auditor.py  research_score.py  scheduler.py  sentiment_analyzer.py  source_planner.py  synthesizer.py  temporal_analyzer.py  token_economy.py  types.py
static/: index.css  index.html  index.js
tests/: conftest.py  test_comparator.py  test_confidence_scorer.py  test_confidence_scorer_v2.py  test_conflict_detector.py  test_dashboard_api.py  test_debate_orchestrator.py  test_deep_researcher.py  test_e2e_research.py  test_evidence_graph.py  test_fase4_autonomia.py  test_fase5_ecosistema.py  (+32 more)
(+41 files in other folders)
