[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-research-agent"
version = "1.0.0"
description = "Agente de pesquisa profunda em tecnologia, SaaS e open source"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "anthropic>=0.25",
    "openai>=1.30",
    "google-genai>=1.0",
    "firecrawl-py>=4.30.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-mock>=3.12",
]
export = [
    "reportlab>=4.0",      # Exportação PDF
    "python-docx>=1.1",    # Exportação DOCX
    "python-pptx>=0.6.23", # Exportação PPTX
]
scheduler = [
    "apscheduler>=3.10.0", # Agendamento de pesquisas recorrentes
]
sentiment = [
    "vaderSentiment>=3.3.2", # Análise de sentimentos e viés
]
all = [
    "reportlab>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "apscheduler>=3.10.0",
    "vaderSentiment>=3.3.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
